Setup JVM lincheck.